Bug 1787101: HyperTextAccessibleBase::OffsetAtPoint: Transform the offset before returning it. r=morgan

Otherwise, the returned offset is incorrect if the point is in a child other than the first.

Differential Revision: https://phabricator.services.mozilla.com/D155571